--- a/index.html
+++ b/index.html
@@ -2,11 +2,161 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
-    <title>HTML Academy: Девайс</title>
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700,800" rel="stylesheet">
+    <link href="css/normalize.css" rel="stylesheet">
+    <link rel="stylesheet" href="css/style.css">
+    <title>Device</title>
   </head>
-  <body>
 
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS, уровень 1</a>».</p>
+  <body>
+    <header class="main-header">
+      <nav class="main-navigation">
+          <a class="logo-icon" href="index.html">
+            <img src="img/logo-icon.svg" width="164" height="35" alt="Device">
+          </a>
+
+          <div class="user-navigation">
+            <form class="search-form" action="https://echo.htmlacademy.ru" method="get">
+              <span class="search-icon"></span>
+              <label class="visually-hidden" for="search">Поиск по сайту</label>
+              <input class="search-line" type="search" name="search" placeholder="Поиск по сайту" id="search">
+            </form>
+
+            <div class="account">
+              <a href="#"><span class="account-icon"></span>Войти</a>
+            </div>
+            <div class="compare">
+              <a href="#"><span class="compare-icon"></span>Сравнить</a>
+            </div>
+            <div class="cart">
+              <a href="#"><span class="cart-icon"></span>Корзина</a>
+            </div>
+          </div>
+
+        <div class="site-navigation-wrapper">
+            <ul class="site-navigation">
+            <li class="site-navigation-item">
+                <a class="site-navigation-link" href="#">Каталог товаров</a>
+                <span class="nav-button nav-button-extend"></span>
+                <ul class="sub-menu">
+                  <li><a class="catalog-link" href="#">Виртуальная реальность</a></li>
+                  <li><a class="catalog-link" href="catalog.html">Моноподы для селфи</a></li>
+                  <li><a class="catalog-link" href="#">Экшн-камеры</a></li>
+                  <li><a class="catalog-link" href="#">Фитнес-браслеты</a></li>
+                  <li><a class="catalog-link" href="#">Умные часы</a></li>
+                  <li><a class="catalog-link" href="#">Квадрокоптеры</a></li>
+                </ul>
+            </li>
+            <li class="site-navigation-item">
+                <a class="site-navigation-link" href="#">Доставка</a>
+            </li>
+            <li class="site-navigation-link">
+                <a class="site-navigation-link" href="#">Гарантия</a>
+            </li>
+            <li class="site-navigation-link">
+                <a class="site-navigation-link" href="#">Контакты</a>
+            </li>
+          </ul>
+        </div>
+      </nav>
+    </header>
+
+    <main class="container">
+      <h1 class="visually-hidden">Интернет магазин Device</h1>
+      <!-- Секция слайдов -->
+      <!-- Секция популярное -->
+      <!-- Секция сервисы -->
+      <!-- Секция лого производителей -->
+      <section class="info">
+        <span class="bar-white"></span>
+        <h2>О нас</h2>
+        <p>Огромный выбор гаджетов не оставит равнодушным гика, который есть в каждом из нас.</p>
+        <p>Мы можем доставить ваш товар в самые отдаленные точки России! DEVICE работает со многими транспортными компаниями:</p>
+        <ul class="partners">
+            <li class="partners-item"><a href="#">Деловые Линии</a></li>
+            <li class="partners-item"><a href="#">Автотрейдинг</a></li>
+            <li class="partners-item"><a href="#">ЖелДорЭкспедиция</a></li>
+        </ul>
+        <a class="button" href="#">Подробнее о нас</a>
+      </section>
+
+      <section class="contacts">
+        <span class="section-line"></span>
+        <h2>Контакты</h2>
+        <p>Вы можете забрать товар сами, заехав в наш офис. Заодно, вы сможете проверить работоспособность покупки. Всякое бывает.</p>
+        <!-- Я надеюсь, это картинка, а не интерекативный элемент, тогда: -->
+        <p><a class="index-map" href="#"><img src="img/index-map.jpg" width="560" height="222" alt="Карта"></a></p>
+        <a class="button" href="#">Напишите нам</a>
+      </section>
+    </main>
+
+    <footer class="main-footer">
+        <a class="logo-icon" href="index.html">
+          <img src="img/logo-icon-footer.svg" width="164" height="35" alt="Device">
+        </a>
+        <div class="footer adress">
+          <p>г. Москва, ул. Строителей, 15</p>
+        </div>
+        <span class="footer-line"></span>
+
+        <nav class="footer-navigation">
+          <div class="user-navigation">
+            <div class="account">
+              <a href="#"><span class="account-icon-footer"></span>Войти</a>
+            </div>
+            <div class="compare">
+              <a href="#"><span class="compare-icon-footer"></span>Сравнить</a>
+            </div>
+            <div class="cart">
+              <a href="#"><span class="cart-icon-footer"></span>Корзина</a>
+            </div>
+          </div>
+
+          <ul class="site-navigation">
+              <li class="site-navigation-item">
+                  <a class="site-navigation-link" href="#">Доставка</a>
+              </li>
+              <li class="site-navigation-item">
+                  <a class="site-navigation-link" href="#">Гарантия</a>
+              </li>
+              <li class="site-navigation-item">
+                  <a class="site-navigation-link" href="#">Контакты</a>
+              </li>
+          </ul>
+        </nav>
+        <div class="footer-social">
+          <ul class="social netwosrk list">
+            <li><a class="social-button social-button-fb" href="#">Facebook</a></li>
+            <li><a class="social-button social-button-inst" href="#">Instagram</a></li>
+            <li><a class="social-button social-button-tw" href="#">Twitter</a></li>
+          </ul>
+        </div>
+        <div class="footer telephone">
+          <p>Тел.: +7 (495) 495-95-95</p>
+        </div>
+        <span class="html-academy-logo"><a href="https://htmlacademy.ru/"></a></span>
+    </footer>
+
+    <section class="modal-feedback">
+      <h2 class="visually-hidden">Обратная связь</h2>
+      <form class="feedback-form" action="https://echo.htmlacademy.ru" method="post">
+        <label for="name">Ваше имя:</label>
+        <input type="text" name="name" placeholder="Имя Фамилия" id="name">
+        <label for="email">Ваш e-mail</label>
+        <input type="email" name="email" placeholder="email@example.com" id="email">
+        <label for="comment">Текст письма:</label>
+        <textarea name="comment" rows="8" cols="80" id="comment" placeholder="В свободной форме"></textarea>
+        <button class="button" type="submit">Отправить</button>
+      </form>
+      <span class="modal-close">Закрыть всплывающее окно</span>
+    </section>
+
+    <section class="modal-map">
+      <h2 class="visually-hidden">Как до нас добраться</h2>
+      <img src="img/modal-map.jpg" alt="г. Москва, ул. Строителей, 15">
+      <button type="button" name="button"></button>
+      <span class="modal-close">Закрыть всплывающее окно</span>
+    </section>
 
   </body>
 </html>
