Добавил класс ссылке [Каталог товаров], чтобы снова было видно плюсик (раскр. окно)

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
         <ul class="site-navigation">
           <li>
-            <a href="#">Каталог товаров</a>
+            <a class="catalog" href="#">Каталог товаров</a>
             <ul class="sub-menu">
               <li>
                 <a href="#">Виртуальная реальность</a>
