--- a/catalog.html
+++ b/catalog.html
@@ -32,7 +32,7 @@
         </ul>
         <ul class="site-navigation">
           <li>
-            <a href="#">Каталог товаров</a>
+            <a class="catalog" href="#">Каталог товаров</a>
             <ul class="sub-menu">
               <li>
                 <a href="#">Виртуальная реальность</a>
