--- a/index.html
+++ b/index.html
@@ -160,43 +160,24 @@
         <h2 class="visually-hidden">Популярные категории товаров</h2>
         <ul class="categories-list">
           <li class="categories-item">
-            <a href="#">
-              <div class="category category-virtual"></div>
-            </a>
-            <a href="#">Виртуальная реальность</a>
+            <a class="category category-virtual" href="#">Виртуальная реальность</a>
           </li>
           <li class="categories-item">
-            <a href="#">
-              <div class="category category-monopod"></div>
-            </a>
-            <a href="#">Моноподы для селфи</a>
+            <a class="category category-monopod" href="#">Моноподы для селфи</a>
           </li>
           <li class="categories-item">
-            <a href="#">
-              <div class="category category-actioncam"></div>
-            </a>
-            <a href="#">Экшн-камеры</a>
+            <a class="category category-actioncam" href="#">Экшн-камеры</a>
           </li>
           <li class="categories-item">
-            <a href="#">
-              <div class="category category-bracelet"></div>
-            </a>
-            <a href="#">Фитнес-браслеты</a>
+            <a class="category category-bracelet" href="#">Фитнес-браслеты</a>
           </li>
           <li class="categories-item">
-            <a href="#">
-              <div class="category category-watch"></div>
-            </a>
-            <a href="#">Умные часы</a>
+            <a class="category category-watch" href="#">Умные часы</a>
           </li>
           <li class="categories-item">
-            <a href="#">
-              <div class="category category-copters"></div>
-            </a>
-            <a href="#">Квадрокоптеры</a>
+            <a class="category category-copters" href="#">Квадрокоптеры</a>
           </li>
         </ul>
-
       <section class="services"></section>
 
       <section class="brands">
