--- a/index.html
+++ b/index.html
@@ -4,35 +4,50 @@
     <meta charset="utf-8">
     <link href="css/normalize.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
+    <!-- <link href="css/outline.css" rel="stylesheet"> -->
     <title>Device</title>
   </head>
 
   <body>
     <header class="main-header">
       <nav class="main-navigation">
-        <a class="logo-icon">
-          <img src="img/logo-icon.svg" width="164" height="35" alt="Интернет-магазин гаджетов Device">
-        </a>
-        <form class="search-form" action="https://echo.htmlacademy.ru" method="get">
-          <label class="visually-hidden" for="search">Поиск по сайту</label>
-          <input class="search-line" type="search" name="search" placeholder="Поиск по сайту" id="search">
-        </form>
-        <ul class="user-navigation">
-          <li class="account">
-            <a class="account-icon" href="#">Войти</a>
-          </li>
-          <li class="compare">
-            <a class="compare-icon" href="#">Сравнить</a>
-          </li>
-          <li class="cart">
-            <a class="cart-icon" href="#">Корзина</a>
-          </li>
-        </ul>
-
-        <ul class="site-navigation">
-          <li>
-            <a class="catalog" href="#">Каталог товаров</a>
-            <ul class="sub-menu">
+        <div class="flex-container">
+          <a class="logo-icon">
+            <img src="img/logo-icon.svg" width="164" height="35" alt="Интернет-магазин гаджетов Device">
+          </a>
+            <div class="flex-container-row">
+              <form class="search-form" action="https://echo.htmlacademy.ru" method="get">
+                <label class="visually-hidden" for="search">Поиск по сайту</label>
+                <input class="search-line" type="search" name="search" placeholder="Поиск по сайту" id="search">
+              </form>
+              <ul class="user-navigation">
+                <li class="account">
+                  <a class="account-icon" href="#">Войти</a>
+                </li>
+                <li class="compare">
+                  <a class="compare-icon" href="#">Сравнить</a>
+                </li>
+                <li class="cart">
+                  <a class="cart-icon" href="#">Корзина</a>
+                </li>
+              </ul>
+            </div>
+          <ul class="site-navigation flex-container-row">
+            <li class="site-navigation-catalog">
+              <a class="catalog" href="#">Каталог товаров</a>
+            </li>
+            <li>
+                <a href="#">Доставка</a>
+            </li>
+            <li>
+              <a href="#">Гарантия</a>
+            </li>
+            <li>
+              <a href="#">Контакты</a>
+            </li>
+          </ul>
+          <div class="sub-menu flex-container-sub">
+            <ul>
               <li>
                 <a href="#">Виртуальная реальность</a>
               </li>
@@ -42,27 +57,22 @@
               <li>
                 <a href="#">Экшн-камеры</a>
               </li>
+            </ul>
+            <ul>
               <li>
                 <a href="#">Фитнес-браслеты</a>
               </li>
               <li>
                 <a href="#">Умные часы</a>
               </li>
+            </ul>
+            <ul>
               <li>
                 <a href="#">Квадрокоптеры</a>
               </li>
             </ul>
-          </li>
-          <li>
-              <a href="#">Доставка</a>
-          </li>
-          <li>
-            <a href="#">Гарантия</a>
-          </li>
-          <li>
-            <a href="#">Контакты</a>
-          </li>
-        </ul>
+          </div>
+        </div>
       </nav>
     </header>
 
@@ -162,7 +172,7 @@
 
       <section class="categories"></section>
         <h2 class="visually-hidden">Популярные категории товаров</h2>
-        <ul class="categories-list">
+        <ul class="categories-list flex-container-row">
           <li class="categories-item">
             <a class="category category-virtual" href="#">Виртуальная реальность</a>
           </li>
