Исправления к защите (мелк.)

--- a/index.html
+++ b/index.html
@@ -228,22 +228,22 @@
           <ul class="brands-list">
             <li class="brands-item">
               <a href="#">
-                <img src="img/brands-dji.png" alt="">
+                <img src="img/brands-dji.png" width="252" height="97" alt="">
               </a>
             </li>
             <li class="brands-item">
               <a href="#">
-                <img src="img/brands-sp.png" alt="">
+                <img src="img/brands-sp.png" width="252" height="97" alt="">
               </a>
             </li>
             <li class="brands-item">
               <a href="#">
-                <img src="img/brands-gopro.png" alt="">
+                <img src="img/brands-gopro.png" width="252" height="97" alt="">
               </a>
             </li>
             <li class="brands-item">
               <a href="#">
-                <img src="img/brands-vive.png" alt="">
+                <img src="img/brands-vive.png" width="252" height="97" alt="">
               </a>
             </li>
           </ul>
