Стилизация ссылок в каталоге

--- a/catalog.html
+++ b/catalog.html
@@ -182,7 +182,7 @@
                   <li class="card-hover">
                     <a class="button" href="#">В корзину</a>
                     <p>
-                      <a href="#">Добавить к сравнению</a>
+                      <a class="add-to-compare" href="#">Добавить к сравнению</a>
                     </p>
                   </li>
                 </ul>
@@ -198,7 +198,7 @@
                   <li class="card-hover">
                     <a class="button" href="#">В корзину</a>
                     <p>
-                      <a href="#">Добавить к сравнению</a>
+                      <a class="add-to-compare" href="#">Добавить к сравнению</a>
                     </p>
                   </li>
                 </ul>
@@ -214,7 +214,7 @@
                   <li class="card-hover">
                     <a class="button" href="#">В корзину</a>
                     <p>
-                      <a href="#">Добавить к сравнению</a>
+                      <a class="add-to-compare" href="#">Добавить к сравнению</a>
                     </p>
                   </li>
                 </ul>
@@ -230,7 +230,7 @@
                   <li class="card-hover">
                     <a class="button" href="#">В корзину</a>
                     <p>
-                      <a href="#">Добавить к сравнению</a>
+                      <a class="add-to-compare" href="#">Добавить к сравнению</a>
                     </p>
                   </li>
                 </ul>
