--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
   <head>
     <meta charset="utf-8">
     <link href="css/normalize.css" rel="stylesheet">
-    <link rel="stylesheet" href="css/style.css">
-    <!-- <link rel="stylesheet" href="css/minified-style.css"> -->
+    <link rel="stylesheet" href="css/minified-style.css">
     <title>Device</title>
   </head>
 
