Добавление ссылки на сервис карт

--- a/index.html
+++ b/index.html
@@ -341,7 +341,9 @@
         </section>
         <section class="modal-map">
           <h2 class="visually-hidden">Как до нас добраться</h2>
-          <img src="img/modal-map.jpg" alt="г. Москва, ул. Строителей, 15">
+          <a href="https://yandex.ru/maps/213/moscow/?ll=37.529654%2C55.686980&mode=search&ol=geo&ouri=ymapsbm1%3A%2F%2Fgeo%3Fll%3D37.529655%252C55.686981%26spn%3D0.001000%252C0.001000%26text%3D%25D0%25A0%25D0%25BE%25D1%2581%25D1%2581%25D0%25B8%25D1%258F%252C%2520%25D0%259C%25D0%25BE%25D1%2581%25D0%25BA%25D0%25B2%25D0%25B0%252C%2520%25D1%2583%25D0%25BB%25D0%25B8%25D1%2586%25D0%25B0%2520%25D0%25A1%25D1%2582%25D1%2580%25D0%25BE%25D0%25B8%25D1%2582%25D0%25B5%25D0%25BB%25D0%25B5%25D0%25B9%252C%252015%2520&z=16">
+            <img src="img/modal-map.jpg" alt="г. Москва, ул. Строителей, 15">
+          </a>
           <button class="modal-close" type="button" name="button">
             <span class="visually-hidden">Закрыть всплывающее окно</span>
           </button>
