--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <link href="css/normalize.css" rel="stylesheet">
   <link rel="stylesheet" href="css/style.css">
-  <script src="/js/script.js"></script>
+  <script src="js/script.js"></script>
   <title>Device</title>
 </head>
 
