--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
           <li class="popular-slide" id="slide-3">
             <div class="popular-wrapper slide3">
               <span class="slide-number">03</span>
-              <b>Порхает как бабочка,
+              <b>Порхает&nbsp;как&nbsp;бабочка,
                 жалит как пчела!</b>
                 <p>
                   Этот обычный, на первый взгляд, квадрокоптер оснащен
